--- a/app/templates/brain_dump/public_note.html
+++ b/app/templates/brain_dump/public_note.html
@@ -420,7 +420,7 @@
     <header class="header">
         <div class="header-container">
             <a href="https://creatrics.com" class="logo">
-                <img src="/static/images/logo.png" alt="Creatrics">
+                <img src="/static/img/templates/logo.png" alt="Creatrics">
             </a>
             <div class="share-badge">
                 {% if note.permission == 'edit' %}
